--- a/projects/mapservice/css/style.css
+++ b/projects/mapservice/css/style.css
@@ -233,19 +233,38 @@ header.container {
 	z-index: 99;
 }
 
-.page__home__link:hover {
-	color: #1bbdff;
+.menu {
+	display: flex;
+}
+
+.menu__item {
+	height: 28px;
+	line-height: 28px;
+}
+
+.page__home__link{
+	display: block;
+	background-color: #1bbdff;
+	color: #fff;
+	padding: 0 7px;
+	transition: all ease .3s;
+}
+
+.page__home__link:hover,
+.info__control--button:hover {
 	background-color: #fff;
+	color: #1bbdff;
 }
 
 .info__control--button {
-	position: absolute;
-	left: 0;
-	padding: 5px 7px;
+	display: block;
+	line-height: 28px;
+	padding: 0 7px;
 	background-color: #1bbdff;
+	cursor: pointer;
 	color: #fff;
 	border: 0;
-	cursor: pointer;
+	transition: all ease .3s;
 }
 .info__control {
 	position: absolute;
@@ -273,6 +292,18 @@ header.container {
 
 .control__icon.active {
 	transform: rotate(180deg);
+}
+
+.position__cursor {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 999;
+}
+.position__cursor__item {
+	width: 60px;
+	background-color: transparent;
+	color: #fff;
 }
 
 /* .zoom {
